# Consensus

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  Dockerfile  README.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json
app/: globals.css  layout.tsx
app/(app)/account/: account.css  page.tsx
app/(app)/bill-demographics/: DemographicsCharts.tsx  bill-demographics.css
app/(app)/feed/: FeedClient.tsx  feed.css  (+1 more)
app/(marketing)/: landing.css  page.tsx
components/auth/: SignOutButton.tsx
components/bills/: BillCard.css  BillCard.tsx  BillList.tsx
components/chatbot/: ChatModal.css  ChatModal.tsx  attachment.tsx  chatbot.tsx  markdown-text.tsx  thread-list.tsx  thread.tsx  tooltip-icon-button.tsx
components/contact/: ContactCard.css  ContactCard.tsx  ContactCardGallery.css  ContactCardGallery.tsx
components/nav/: ConditionalTopNav.tsx  Logo.tsx  TopNav.css  TopNav.tsx
components/ui/: PrimaryButton.css  PrimaryButton.tsx  button.tsx  tooltip.tsx
db/: schema.sql  seed.sql
lib/: auth.ts  database.types.ts  mocks.ts  password.ts  rag.ts  supabase.ts  utils.ts  validators.ts
lib/ai/: anthropic.ts  openai.ts  openrouter.ts
lib/congress/: clients.ts  queryBills.ts
python/: .env.example  README.md  pyproject.toml  requirements.txt  setup_milvus.py  setup_venv.sh  test_connection.py  test_milvus.py
python/src/: __init__.py  ingest.py  recommend.py  recommend_categories.py  search_api.py  vector_search.py  vectors.py
scripts/: load-env-check.ts  summarize-all-bills.ts  test-supabase.ts
types/: index.ts  next-auth.d.ts
(+113 files in other folders)
